[package]
name = "icarust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tonic = "0.6"
prost = "0.9"
prost-types = "0.9"
futures = {version = "0.3", default-features = false, features = ["alloc"]}
futures-util = "0.3"
tokio = { version = "1.0", features = ["rt-multi-thread", "macros", "sync", "time"] }
tokio-stream = "0.1"
toml = "0.5"
async-stream = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.8"
rand_distr = "0.4"
fnv = "1.0"
log = "0.4.0"
env_logger = "0.9.0"
uuid = { version = "0.8", features = ["v4"]}
ndarray-npy = { version = "0.8.1", default-features = false }
ndarray = "0.15.0"
memmap2 = "0.5.3"
rm-frust5-api = "0.0.3"
chrono = "0.4"
byteorder = "1"

[build-dependencies]
tonic-build = "0.6"