[package]
name = "icarust"
version = "0.6.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tonic = {version = "0.11", features = ["transport", "tls"]}
prost = "0.12"
prost-types = "0.12"
futures = {version = "0.3", default-features = false, features = ["alloc"]}
futures-util = "0.3"
tokio = { version = "1.0", features = ["rt-multi-thread", "macros", "sync", "time","fs"] }
tokio-stream = "0.1"
toml = "0.5"
async-stream = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.8"
rand_distr = "0.4"
fnv = "1.0"
log = "0.4.20"
uuid = { version = "1.6.1", features = ["v4"]}
ndarray-npy = { version = "0.8.1", default-features = false }
ndarray = "0.15.0"
memmap2 = "0.5.3"
rm-frust5-api = "0.0.3"
chrono = "0.4"
byteorder = "1"
clap = { version = "3.2.5", features = ["derive"] }
configparser = "3.0.2"
nom = "7.1.3"
needletail = "0.5.1"
ctrlc = {version= "3.2.5", features = ["termination"] }
fern = { version = "0.6.2", features = ["colored", "chrono"] }
humantime = "2.1.0"
lazy_static = "1.4.0"
indicatif = "0.17.5"
podders = "0.1.3"
# podders = { git = "https://github.com/Adoni5/podders.git" }
#podders = { path = "../podders" }
probability = "0.20.3"
rayon = "1.10.0"


[build-dependencies]
tonic-build = "0.11"
